--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,24 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+
+        <!--星レビュー機能-->
+          <td>
+            <div id="rate_star<%= book.id %>"></div>
+              <script>
+                $('#rate_star<%= book.id %>').empty();
+                $('#rate_star<%= book.id %>').raty({
+                  size: 36,
+                  starOff:  '<%= asset_path('star-off.png') %>',
+                  starOn : '<%= asset_path('star-on.png') %>',
+                  starHalf: '<%= asset_path('star-half.png') %>',
+                  half: true,
+                  readOnly: true,
+                  score: '<%= book.star %>'
+                });
+              </script>
+          </td>
+
       </tr>
     <% end %>
   </tbody>
