[応用課題9d]タグ検索機能追加

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -9,6 +9,11 @@
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :tag %>
+    <%= f.text_field :category, class: 'form-control book_category' %>
+  </div>
+
   <!--星5レビュー機能-->
   <div class="form-group" id="rate">
    <%= f.label :star,'Rate', class:"col-md-3 col-form-label" %>
