--- a/app/views/books/search_book.html.erb
+++ b/app/views/books/search_book.html.erb
@@ -1,20 +1,25 @@
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
+
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
       <th>Tag</th>
       <th colspan="3"></th>
+
     </tr>
   </thead>
   <tbody>
-    <% books.each do |book| %>
+    <% @books.each do |book| %>
       <tr>
-        <td><%= link_to(book.user) do %>
+
+        <td>
+          <%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
           <% end %>
         </td>
+
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
 
