--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,11 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
+            <td><%= link_to search_book_path(keyword: @book.category) do %>
+              <%= @book.category %>
+            <% end %>
+          </td>
+
 　　　　　　<!--星レビュー機能-->
           <td>
             <div id="rate_star<%= @book.id %>"></div>
